--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,3 +1,8 @@
+name: pytest
+on:
+  push:
+    branches: [master]
+  pull_request:
 steps:
   - uses: actions/checkout@v2
   - uses: actions/setup-python@v2
