--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -3,14 +3,16 @@ on:
   push:
     branches: [master]
   pull_request:
-steps:
-  - uses: actions/checkout@v2
-  - uses: actions/setup-python@v2
-    with:
-      python-version: "3.9"
-  - name: Display Python version
-    run: python -c "import sys; print(sys.version)"
-  - name: Install requirements
-    run: pip install -r requirements.txt && pip install pytest
-  - name: Run pytest
-  - run: pytest
+jobs:
+  build:
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+      - name: Display Python version
+        run: python -c "import sys; print(sys.version)"
+      - name: Install requirements
+        run: pip install -r requirements.txt && pip install pytest
+      - name: Run pytest
+      - run: pytest
